--- a/doc/specification.tex
+++ b/doc/specification.tex
@@ -2,6 +2,7 @@
 \documentclass[a4paper, 12pt, notitlepage]{report}
 
 \usepackage[english]{babel}
+\usepackage{titling}
 
 \title{The Berlin Programming~Language Specification}
 \author{Alan~Davis}
